--- a/pages/_app.scss
+++ b/pages/_app.scss
@@ -12,7 +12,6 @@
 }
 
 body {
-  padding-top: $pt-navbar-height;
   height: vh(100);
   margin: 0;
 
